# project1

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  SDD_Filled.docx  docker-compose.yml  frontend.py  main.py  pyproject.toml  requirements.txt  schemas.py  tunnel-config.yml  utilities.py
output/: analysis_1.json
