[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "fastapi-security>=0.1.0",
    "getenv>=0.2.0",
    "security>=1.3.1",
    "sqlmodel>=0.0.31",
    "typing>=3.10.0.0",
]
