[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.31",
    "uvicorn>=0.40.0",
    "streamlit>=1.54.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
]
