[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.0.2",
    "cryptography>=41.0.0",
    "uvicorn>=0.40.0",
    "streamlit>=1.54.0",
    "pandas>=2.0.0",
    "numpy>=1.25.0",
    "PyPDF2>=3.0.0",
    "google-genai>=0.2.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "scikit-learn>=1.4.0",
    "requests",
]
